# d-transcreate-skill

./: .distignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: validate.yml
_archive/: README.md  SKILL.md
_archive/agents/: openai.yaml
_archive/references/: artifact-schemas.md  context-and-subagents.md  long-document-workflow.md  qa-gates.md  research-and-style.md
adapters/claude-code/: CLAUDE.md
adapters/codex/: SKILL.md
adapters/cursor/: AGENTS.md
adapters/generic/: AGENTS.md  d-transcreate.md
adapters/opencode/: AGENTS.md  opencode.json
core/: d-transcreate.md
core/prompts/: chunk-translator.md  continuity-reviewer.md  fidelity-reviewer.md  formatting-reviewer.md  style-researcher.md  terminology-researcher.md  transcreate-coordinator.md
core/schemas/: chunk-manifest.md  chunk-summary.md  context-plan.md  domain-map.md  glossary.md  qa-report.md  source-map.md  story-bible.md  style-sheet.md  subagent-dispatch-plan.md  translation-brief.md  unresolved-issues.md
core/workflows/: context-management.md  fiction-continuity.md  long-document.md  qa-gates.md  subagents.md  technical-domain.md  terminology-research.md
examples/fiction-short/: README.md
scripts/: build_adapters.py  validate_pack.py
templates/: chunk-manifest.csv  chunk-summary.md  context-plan.md  domain-map.md  glossary.csv  qa-report.md  source-map.md  story-bible.md  style-sheet.md  subagent-dispatch-plan.yaml  translation-brief.md  unresolved-issues.md
tests/: test_pack.py
(+46 files in other folders)
