[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "d-transcreate-skill"
version = "0.4.0"
description = "Portable translation and transcreation skill for AI agents."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = []

[tool.setuptools]
py-modules = []
